# selvarath-debate

./: .gitattributes  .gitignore  README.md  api.py  pyproject.toml
analysis/: describe.py  inference.py  load.py  mechanism.py  mechanism_proxy.py  parse_sensitivity.py  robustness.py  run_report.py
artifacts/: README.md  local-research-artifacts.json
data/: DATA.md
docs/: oracle-query-contract.md  phase2-decision-proposal.md  phase2-readiness-and-signoff.md  public-update-draft-2026-07-15.md  rejudge-protocol.md
rejudge/: analyze_batch.py  analyze_stage1.py  api_client.py  artifact_manifest.py  batch_replay.py  build_reviewer_prompt.py  calibrate.py  calibrate_analyze.py  calibration_questions_2026-07-14.json  calibration_recovery_gemma_2026-07-15.json  checker_labeling_jack_2026-07-19.html  checker_labeling_joey_2026-07-19.html  checker_labeling_tool_2026-07-19.html  checker_verification_jack_2026-07-20.html  composer.py  config.py  debate_gen.py  freeze_protocol.py  gemma_recovery_closure_2026-07-19.json  gemma_recovery_run_record_2026-07-18.json  judge_loop.py  oracle_channel.py  oracle_shortcut_audit_2026-07-12.json  parsers.py  phase2_anchor_parser_policy_2026-07-21.json  phase2_benchmark_audit_design_2026-07-21.json  phase2_benchmark_audit_results_2026-07-21.json  phase2_canary_checker_governance_2026-07-23.json  phase2_canary_claude_gate_amendment_2026-07-23.json  phase2_canary_governance_ratification_2026-07-23.json  phase2_canary_manifest_proposal_2026-07-23.json  phase2_canary_owner_decision_2026-07-23.json  phase2_capability_corpus.py  (+98 more)
(+74 files in other folders)
