[project]
name = "debate-experiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "together>=1.3",
    "pydantic>=2.7",
    "rich>=13",
    "typer>=0.12",
    "pandas>=3.0.3",
    "numpy>=2.5.1",
]

[dependency-groups]
dev = [
    "ty",
    "pytest>=8",
]

# Run commands via: uv run python orchestrate.py <command>
